--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,6 @@
     "removeComments": true,
     "newLine": "LF",
 
-    "sourceMap": true,
-    "declaration": false,
-    "declarationDir": "dist"
+    "sourceMap": true
   }
 }
